[package]
name = "auction_house_tracker"
version = "0.1.0"
authors = ["schneki <schneki.max@gmail.com>"]

[dependencies]
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1.3"
tokio-core = "0.1"
serde_json = ""
serde = ""
serde_derive = ""
postgres = { version = "0.15", features = ["with-chrono"] }
chrono = ""
